--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -29,6 +29,7 @@ html{
 body{
     font-family: "Lato",sans-serif;
     font-weight: 400;
+    background-color: $color-primary-light;
     line-height: 1.7;
     color: black;
     scrollbar-width: thin;
