--- a/src/assets/sass/page/_recipepage.scss
+++ b/src/assets/sass/page/_recipepage.scss
@@ -4,6 +4,7 @@
         0 10px 10px rgba($color: #000000, $alpha: 0.2)
     ;
     min-height: 100vh;
+    background-color: white;
     width: 70vw;
     display: grid;
     grid-template-rows: repeat(2, 1fr);
